Fix some spacing in information block

--- a/style.css
+++ b/style.css
@@ -36,6 +36,22 @@ ul {
 
 .image-block {
     background: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.image-title {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1F2937;
+    padding: 30px;
+}
+
+.four-images {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 60px;
 }
 
 .quote-block {
